fixed multiple layout problems with home page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,57 +6,51 @@ div.wrapper {
 	background-color: antiquewhite;
 }
 
-header { 
-	display: inline-flex;
-	height: 200px;
+header.grid-container { 
 	min-width: 100%;
-	background-color: red;
+	display: grid;
+	grid-gap: 10px;
+	grid-template-columns: 150px auto 25%;
+	grid-template-rows: 151px;
+	border-bottom: 2px solid black;
 }
 
-img.header { 
-	float: left;
-	width: 200px; 
-	height: 200px; 
+img.small-logo { 
+	width: 150px; 
+	height: 150px; 
 }
 
-div.header {
-	float: left;
-	height: 200px;
-	padding: 0px 25px;
+img.large-logo {
+	min-width: 95%;
+	height: 120px;
+	padding: 15px 2.5%;
+}
+
+nav.login {	
+	padding: 5px 25px;
 	background-color: aquamarine; 
-}
-
-nav.header {
-	float: right;
-	width: 25%;
-	height: 190px;	
-	padding: 5px 20px;
-	background-color: cornflowerblue; 
 }
 
 aside.quote {
 	float: left;
-	width: 20%;
-	padding: 5px 1%;
-	background-color: aquamarine;
+	width: 10%;
+	padding: 5px 2.5%;
 }
 
 nav.home-lab-list {
 	float: right;
-	width: 24%;
-	padding: 5px 1%;
-	background-color: aquamarine;
+	width: 20%;
+	padding: 5px 2.5%;
 }
 
 section.project-summary {
 	float: left;
-	width: 50%;
-	padding: 5px 1%;
-	background-color: lightpink
+	width: 55%;
+	padding: 5px 2.5%;
 }
 
 footer.legal {  
 	clear: both;
-	padding: 5px 20px;
-	background-color: cornflowerblue;
+	padding: 5px 2.5%;
+	border-top: 2px solid black;
 }
